# peTool

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml  cmake-windows-platform.yml  macos-release.yml  windows-release.yml
DependencySetup/: setup_macos_dep.sh  setup_windows_dep.bat
InnoSetup/: Setup_peTool.iss
docs/Doxygen/html/: _c_l_i_8cpp.html  _c_l_i_8cpp_8o_8d.html  _c_l_i_8h.html  _c_l_i_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _console_8cpp.html  _console_8cpp_8o_8d.html  _console_8h.html  _console_8h_source.html  _database_8cpp.html  _database_8cpp_8o_8d.html  _database_8h.html  _database_8h_source.html  _debugger_8cpp.html  _debugger_8cpp_8o_8d.html  _debugger_8h.html  _debugger_8h_source.html  _detector_8cpp.html  _detector_8cpp_8o_8d.html  _detector_8h.html  _detector_8h_source.html  _disassembler_8cpp.html  _disassembler_8cpp_8o_8d.html  _disassembler_8h.html  _disassembler_8h_source.html  _entropy_8cpp.html  _entropy_8cpp_8o_8d.html  _entropy_8h.html  _entropy_8h_source.html  _file_editor_8cpp.html  _file_editor_8cpp_8o_8d.html  _file_editor_8h.html  _file_editor_8h_source.html  _file_i_o_8cpp.html  _file_i_o_8cpp_8o_8d.html  _file_i_o_8h.html  _file_i_o_8h_source.html  _graph_view_8cpp.html  _graph_view_8cpp_8o_8d.html  (+836 more)
docs/Doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+87 more)
docs/Doxygen/latex/: _c_l_i_8h_source.tex  _console_8h_source.tex  _database_8h_source.tex  _debugger_8h_source.tex  _detector_8h_source.tex  _disassembler_8h_source.tex  _entropy_8h_source.tex  _file_editor_8h_source.tex  _file_i_o_8h_source.tex  _graph_view_8h_source.tex  _injector_8h_source.tex  _linux_injector_8h_source.tex  _logger_8h_source.tex  _mac_os_injector_8h_source.tex  _mem_profiler_8h_source.tex  _memory_manager_8h_source.tex  _p_e_8h_source.tex  _perf_mon_8h_source.tex  _print_utils_8h_source.tex  _process_monitor_8h_source.tex  _ptr_utils_8h_source.tex  _rebuilder_8h_source.tex  _threading_base_8h_source.tex  _utils_8h_source.tex  _windows_injector_8h_source.tex  annotated.tex  category_app_view_controller_07_08.eps  category_app_view_controller_07_08.tex  category_n_s_cursor_07_08.tex  class_base_mem_profiler.eps  class_base_mem_profiler.tex  class_cli_interface_1_1_c_l_i.tex  class_console_internals_1_1_console.tex  class_database.tex  class_debugger.tex  class_detector_internals_1_1_anti_debug_detection.tex  class_detector_internals_1_1_packer_detection.tex  class_dissassembler_internals_1_1_disassembler.tex  class_dll_injector_1_1_injector_platform.tex  class_entropy_internals_1_1_entropy.tex  (+330 more)
docs/html/: md__r_e_a_d_m_e.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  searchdata.js
docs/latex/: md__r_e_a_d_m_e.tex
icon/: cog.icns
include/CLI/: CLI.h  Console.h
include/CORE/: Debugger.h  Detector.h  Disassembler.h  Injector.h  Logger.h  PE.h  ProcessMonitor.h  Rebuilder.h  ThreadingBase.h
include/FILEIO/: Database.h  FileEditor.h  FileIO.h  Utils.h
include/LIBMAN/: LinuxInjector.h  MacOsInjector.h  WindowsInjector.h
include/MANMON/: MemProfiler.h  MemoryManager.h  PerfMon.h
include/UTILS/: PrintUtils.h  PtrUtils.h
include/VIEW/: Entropy.h  GraphView.h
src/: CLI.cpp  Console.cpp  Database.cpp  Debugger.cpp  Detector.cpp  Disassembler.cpp  Entropy.cpp  FileEditor.cpp  FileIO.cpp  GraphView.cpp  Injector.cpp  LinuxInjector.cpp  Logger.cpp  MacOsInjector.cpp  MemProfiler.cpp  MemoryManager.cpp  PE.cpp  PEHeader.cpp  PerfMon.cpp  ProcessMonitor.cpp  Rebuilder.cpp  ThreadingBase.cpp  Untils.cpp  WindowsInjector.cpp  apple.mm  linux.cpp  macos.mm  main.cpp  utils.cpp  windows.cpp
src/include/: Debugger.h  Detector.h  Disassembler.h  Entropy.h  FileEditor.h  FileIO.h  GraphView.h  Injector.h  MemoryManager.h  PE.h  PEHeader.h  PerfMon.h  Untils.h  Utils.h  utils.h
src/linux/: linux.cpp
src/macos/: macos.mm
src/windows/: windows.cpp
